--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,8 @@
 [default]
-role_id :
-token :
+VerifedID : 
+FailedID : 
+NoapiID : 
+token : 
 allianceID : 99006805
-killmail_channel_ID : 263518922521706507
-api_filter_url : https://zkillboard.com/api/orderDirection/desc/json/
+killmail_channel_ID : 
+api_filter_url : https://zkillboard.com/api/allianceID/99006805/orderDirection/desc/json/
